<resources>
    <string name="app_name">SteamSpares</string>
    <string name="button_addGame">Add Game</string>
    <string name="button_saveGame">Save Game</string>
    <string name="hint_gameTitle">Game Title</string>
    <string name="hint_gameCode">Game Code</string>
    <string name="hint_gameNotes">Game Notes</string>
    <string name="menu_addGame">Add</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_changeImage"> Change Image </string>
    <string name="action_settings">Settings</string>
    <string name="list_menu_cancel">Cancel</string>
    <string name="empty_name_hint">"Plase enter a title"</string>
    <string name="bad_code_hint">"Plase enter proper key code"</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="status_swap">Swap Status</string>
    <string-array name="status_options">
        <item>All</item>
        <item>Unused</item>
        <item>Used</item>
    </string-array>
    <string-array name="new_status_options">
        <item>Unused</item>
        <item>Used</item>
    </string-array>
    <!--    Name for editing different than adding new ? How? -->
    <string name="edit_fragment">Editing Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_used">Used</string>
    <string name="menu_unused">Unused</string>
    <string name="menu_stats">Statistics</string>
    <string name="nav_header_desc">User info when login system is a thing</string>
    <string name="navigation_drawer_open">Open Nav Bar</string>
    <string name="navigation_drawer_close">Close Nav Bar</string>
    <string name="status">Status</string>
    <string name="connection_problem">Could not download steam app IDs file. Game details unavailable. Check phone internet connection.</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="messageLoading">Connecting to server...</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="share">Share</string>
    <string name="giftMessage">Hey there! You got a gift from %1$s!\n\nGame: %2$s\nCode: %3$s\nMore details at: %4$s\n\nEnjoy!</string>
    <string name="autoswap_msg">Do you want to set the game <![CDATA[<b><font color=#0000FF>%1$s</font></b>]]> status to be used?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="spare_games_stats">SPARE GAMES STATS</string>
    <string name="used_games_count">Used Games:</string>
    <string name="unused_games_count">Unused Games:</string>
    <string name="games_total_count">Games Total:</string>
    <string name="username_title">Name</string>
    <string name="email_title">Email</string>
    <string name="user_since_title">User since</string>
</resources>