<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Games">
        <menu>
            <item
                android:id="@+id/nav_unused"
                android:icon="@drawable/ic_baseline_check_24"
                android:title="@string/menu_unused" />
            <item
                android:id="@+id/nav_used"
                android:icon="@drawable/ic_baseline_close_24"
                android:title="@string/menu_used" />
        </menu>
    </item>

    <item android:title="Extra">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_baseline_help_outline_24"
                android:title="@string/menu_stats" />
        </menu>
    </item>

</menu>
