<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StatsFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_id_text"
        android:textAlignment="center"
        android:text="TestID"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username_title"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/usernametext"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="A user"
            android:layout_weight="6"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/usermailtext"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_title"
            android:layout_weight="6"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_since_title"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/usersincetext"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_since_title"
            android:layout_weight="6"/>

    </LinearLayout>

    <View
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/GameStatsTitle"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="16dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spare_games_stats" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/games_total_count"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/gamestotaltext"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/games_total_count"
            android:layout_weight="6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/used_games_count"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/gamesusedcounttext"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/used_games_count"
            android:layout_weight="6"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <TextView
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unused_games_count"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/gamesunusedcounttext"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unused_games_count"
            android:layout_weight="6"/>

    </LinearLayout>

</LinearLayout>